...
                    </View>

                    {/* SIGN UP ACTIVE LINK */}
                    <View style={styles.footer}>
                        <Text style={styles.footerText}>{"Don't have an account? "}</Text>
                        <TouchableOpacity activeOpacity={0.7} onPress={() => { lightTap(); navigation.navigate('SignUp'); }}>
                            <Text style={styles.signupLink}>Sign Up</Text>
                        </TouchableOpacity>
                    </View>

                </KeyboardAvoidingView>
            </SafeAreaView>
        </View>
...
